--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
     <section id="two" class="wrapper alt style2">
 
         <section class="spotlight">
-            <div class="image"><img src="images/low_rank_manifold_big_formula.png"
+            <div class="image"><img src="images/lr_manifold.png"
                                     alt="Illustration of a low-rank manifold of neural network weights."/></div>
             <div class="content">
                 <h2>Dynamical Low Rank Training <br/>
