--- a/publications.html
+++ b/publications.html
@@ -124,7 +124,7 @@
                      <hr/>
                     <h3> Community and Outreach</h3>
                     <ul>
-                        <li>Oranization of the <br/>
+                        <li>Organization of the <br/>
                             <i><a href="https://indico.scc.kit.edu/event/659/">International Workshop on Moment Methods in Kinetic Theory IV</a></i>
                             <br/>
                             April 2023
@@ -134,7 +134,7 @@
                     <h3> Conference Presentations</h3>
                     <ul>
                         <li>Structure Preserving Neural Networks for Moment Method Acceleration<br/>
-                            <i><a href="https://indico.scc.kit.edu/event/659/">SInternational Workshop on Moment Methods in Kinetic Theory IV</a></i>
+                            <i><a href="https://indico.scc.kit.edu/event/659/">International Workshop on Moment Methods in Kinetic Theory IV</a></i>
                             <br/>
                             April 2023
                         </li>
