--- a/index.html
+++ b/index.html
@@ -88,23 +88,19 @@
             </ul>
 
         </div>
-
-
         <section class="spotlight">
-            <div class="image"><img src="images/Steffen_portrait.png"
+            <div class="image"><img src="images/Steffen_portrait.jpg"
                                     alt="Steffen Schotthöfer."/></div>
             <div class="content">
                 <header class="major">
                     <h2>My passion is the creation<br/>
                         of efficient and robust systems</h2>
                 </header>
-                <p>I am a Ph.D. researcher at <a href="https://www.scc.kit.edu/">KIT</a> in Karlsruhe <br/>
+                <p>I am the Householder Fellow in Mathematics at the <a href="https://www.ornl.gov/">Oak Ridge National Laboratory</a> <br/>
                     and study topics on the interface between <b> machine learning</b>, <b>optimization</b> and <b>numerical
                         simulation</b>.
-                    Recent projects involve neural network compression, radiation transport, optimal control and
-                    moment methods. A key motivation of
-                    my work is increasing efficiency and robustness of real world applications using differentiable
-                    models with fast implementation.
+                    Recent projects involve low-rank based methods for neural network compression and high dimensional PDE simulation. A key motivation of
+                    my work is increasing efficiency and robustness of models for  real world applications.
                 </p>
                 <p>
                     Explore my projects below!
