--- a/publications.html
+++ b/publications.html
@@ -47,6 +47,28 @@
             <div class="inner">
                 <section>
                     <h3>Publications</h3>
+                    <h4>2023</h4>
+                    <ul>
+                        <li>Conservation properties of the augmented basis update & Galerkin integrator for kinetic problems <br/>
+                            <b> Lukas Einkemmer,  Jonas Kusch, <u>Steffen Schotthöfer</u>
+                            </b><br/>
+                            <i><a href="https://arxiv.org/abs/2311.06399">ArXiv preprint</a> </i>
+                            <a href="https://github.com/JonasKu/Publication-Conservation-properties-of-the-augmented-basis-update-Galerkin-integrator" class="icon brands fa-github"><span
+                                    class="label">Github</span></a>
+                        </li>
+                        <li>Rank-adaptive spectral pruning of convolutional layers during training <br/>
+                            <b> Emanuele Zangrando,<u>Steffen Schotthöfer</u>, Gianluca Ceruti, Jonas Kusch,
+                                Francesco Tudisco
+                            </b><br/>
+                            <i><a href="https://arxiv.org/abs/2305.19059">ArXiv preprint</a> </i>
+                        </li>
+
+                        <li>Synergies between Numerical Methods for Kinetic Equations and Neural Networks <br/>
+                            <b>  <u>Steffen Schotthöfer</u>
+                            </b><br/>
+                            <i><a href="https://publikationen.bibliothek.kit.edu/1000158838">Dissertation</a> </i>
+                        </li>
+                    </ul>
                     <h4>2022</h4>
                     <ul>
                         <li>Low-rank lottery tickets: finding efficient low-rank neural networks via matrix differential
@@ -124,6 +146,11 @@
                      <hr/>
                     <h3> Community and Outreach</h3>
                     <ul>
+                         <li>Reviewer for the <br/>
+                            <i><a href="https://nips.cc/">NeurIPS 2023 Conference</a></i>
+                            <br/>
+                            August 2023
+                        </li>
                         <li>Organization of the <br/>
                             <i><a href="https://indico.scc.kit.edu/event/659/">International Workshop on Moment Methods in Kinetic Theory IV</a></i>
                             <br/>
@@ -199,7 +226,7 @@
                         </li>
                     </ul>
                     <hr/>
-                    <h3>Seminar Talks</h3>
+                    <h3>Selected Talks</h3>
                     <ul>
                         <li>Low-rank lottery tickets: Finding efficient low-rank neural networks via matrix differential
                             equations<br/>
