--- a/publications.html
+++ b/publications.html
@@ -228,6 +228,13 @@
                     <hr/>
                     <h3>Selected Talks</h3>
                     <ul>
+
+                        <li>Dynamical Low-Rank Compression of Neural Networks<br/>
+                            <i><a href="https://twitter.com/ICL_UTK/status/1707762066252062935
+">ICL Seminar, University of Tennessee, Knoxville, USA </a> </i>
+                            <br/>
+                            September 2023
+                        </li>
                         <li>Low-rank lottery tickets: Finding efficient low-rank neural networks via matrix differential
                             equations<br/>
                             <i><a href="https://num.math.uni-bayreuth.de/de/news/2023/modus-vortrag-schotthoefer/index.html">MODUS
