--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
     <!-- One  -->
     <section id="one">
         <header class="major">
-            <h2>About me.</h2>
+            <h2>About me</h2>
         </header>
         <p>I am the Householder Fellow in Mathematics at the <a href="https://www.ornl.gov/">Oak Ridge National
-            Laboratory</a>. My
+            Laboratory, USA</a>. My
             research involves low-rank based methods for neural network compression and high dimensional PDE simulation.
             A key motivation of
             my work is increasing efficiency and robustness of models for real world applications.
@@ -119,7 +119,7 @@ Numerical simulations of kinetic problems can become prohibitively expensive due
             <article class="col-6 col-12-xsmall work-item">
                 <a href="img_news/lr_manifold.png" class="image fit thumb"><img src="img_news/lr_manifold.png"
                                                                                 alt="Numerical results of the low-rank simulation"/></a>
-                <h3> Paper out: May. 30 2023
+                <h3> Paper out: May 30 2023
                 </h3>
                 <p> The computing cost and memory demand of deep learning pipelines have grown fast in recent years and
                     thus a variety of pruning techniques have been developed
@@ -159,7 +159,7 @@ A smaller number of methods address the reduction of training costs, mostly base
                         class="label">Github</span></a>
             </li>
             <li>Rank-adaptive spectral pruning of convolutional layers during training <br/>
-                <b> Emanuele Zangrando,<u>Steffen Schotthöfer</u>, Gianluca Ceruti, Jonas Kusch,
+                <b> Emanuele Zangrando, <u>Steffen Schotthöfer</u>, Gianluca Ceruti, Jonas Kusch,
                     Francesco Tudisco
                 </b><br/>
                 <i><a href="https://arxiv.org/abs/2305.19059">ArXiv preprint</a> </i>
