updated talks and pubs

--- a/index.html
+++ b/index.html
@@ -166,6 +166,15 @@ A smaller number of methods address the reduction of training costs, mostly base
     <!-- THREE-->
     <section id="three">
         <h2>Publications</h2>
+            <h4>2024</h4>
+                <ul>
+                    <li>Structure-Preserving Operator Learning: Modeling the Collision Operator of
+Kinetic Equations <br/>
+                        <b> Jae Yong Lee,  <u>Steffen Schotthöfer</u>, Tianbai Xiao, Sebastian Krumscheid, Martin Frank
+                        </b><br/>
+                        <i><a href="https://arxiv.org/html/2402.16613v1">ArXiv preprint</a> </i>
+                    </li>
+                </ul>
         <h4>2023</h4>
         <ul>
             <li>Conservation properties of the augmented basis update & Galerkin integrator for kinetic problems <br/>
@@ -352,6 +361,18 @@ A smaller number of methods address the reduction of training costs, mostly base
         <hr/>
         <h2>Selected Talks</h2>
         <ul>
+              <li>Dynamical Low-Rank Approximation for
+Kinetic Equations and Neural Networks<br/>
+                <i> Lawrence Berkeley National Laboratories, CA, USA  </i>
+                <br/>
+                December 2023
+            </li>
+             <li>Dynamical Low-Rank Approximation for
+Kinetic Equations and Neural Networks<br/>
+                <i>  Lawrence Berkeley National Laboratories, CA, USA  </i>
+                <br/>
+                December 2023
+            </li>
             <li>Dynamical Low-Rank Compression of Neural Networks<br/>
                 <i><a href="https://twitter.com/ICL_UTK/status/1707762066252062935
 ">ICL Seminar, University of Tennessee, Knoxville, USA </a> </i>
