--- a/index.html
+++ b/index.html
@@ -301,29 +301,53 @@ Kinetic Equations <br/>
         </ul>
     </section>
     <section id="four">
-        <h2> Community and Outreach</h2>
+        <h2> Community and Volunteering</h2>
         <ul>
-            <li>Reviewer for the <br/>
+            <li>Reviewer for
+                <i><a href="https://www.siam.org/publications/journals/multiscale-modeling-and-simulation-a-siam-interdisciplinary-journal-mms">SIAM Multiscale Methods and Simulation</a></i>
+            </li>
+             <li>Reviewer for the
+                <i><a href="https://nips.cc/">NeurIPS 2024 Conference</a></i>
+                <br/>
+
+            </li>
+            <li>Reviewer for the
                 <i><a href="https://icml.cc/">ICML 2024 Conference</a></i>
-                <br/>
-                March 2024
             </li>
-            <li>Reviewer for the <br/>
+            <li>Reviewer for the
                 <i><a href="https://nips.cc/">NeurIPS 2023 Conference</a></i>
-                <br/>
-                August 2023
+
             </li>
-            <li>Organization of the <br/>
+            <li>Organization of the
                 <i><a href="https://indico.scc.kit.edu/event/659/">International Workshop on Moment Methods in Kinetic
                     Theory IV</a></i>
-                <br/>
-                April 2023
             </li>
         </ul>
     </section>
     <section id="five">
-        <h2> Conference Presentations</h2>
+        <h2> Conferences </h2>
         <ul>
+            <li>Neural Network Training with Dynamical Low-Rank Inspired Optimizers<br/>
+                <i><a href="https://www.scicade2024.org/">SciCADE 2024</a></i>
+                <br/>
+                July 2024
+            </li>
+            <li>Conservation Properties of the Augmented Basis Update and Galerkin Integrator for Kinetic Problems<br/>
+                <i><a href="https://www.siam.org/conferences/cm/conference/an24">SIAM Annual Meeting 2024</a></i>
+                <br/>
+                July 2024
+            </li>
+            <li>Memory and time efficient neural network training via dynamical low-rank approximation<br/>
+                <i><a href="https://jahrestagung.gamm.org/annual-meeting-2024/program/young-researchers-minisymposia/">GAMM Annual Meeting 2024</a></i>
+                <br/>
+                March 2024
+            </li>
+          <li>Regularized, structure-preserving neural networks for the minimal entropy closure of the
+Boltzmann moment system<br/>
+            <i><a href="https://jahrestagung.gamm.org/annual-meeting-2024/program/young-researchers-minisymposia/">GAMM Annual Meeting 2024</a></i>
+            <br/>
+            March 2024
+            </li>
             <li>Structure Preserving Neural Networks for Moment Method Acceleration<br/>
                 <i><a href="https://indico.scc.kit.edu/event/659/">International Workshop on Moment Methods in Kinetic
                     Theory IV</a></i>
@@ -393,7 +417,7 @@ Kinetic Equations <br/>
         <hr/>
         <h2>Selected Talks</h2>
         <ul>
-              <li>Dynamical Low-Rank Approximation for
+            <li>Dynamical Low-Rank Approximation for
 Kinetic Equations and Neural Networks<br/>
                 <i> Lawrence Berkeley National Laboratories, CA, USA  </i>
                 <br/>
