--- a/index.html
+++ b/index.html
@@ -187,6 +187,20 @@ A smaller number of methods address the reduction of training costs, mostly base
     <section id="three">
         <h2>Publications</h2>
             <h4>2024</h4>
+                 <ul>
+                    <li>GeoLoRA: Geometric integration for parameter efficient fine-tuning <br/>
+                        <b> <u>Steffen Schotthöfer</u>, E Zangrando, G Ceruti, F Tudisco, J Kusch
+                        </b><br/>
+                        <i><a href="https://arxiv.org/pdf/2410.18720">ArXiv preprint</a> </i>
+                    </li>
+                </ul>
+                <ul>
+                    <li>Federated Dynamical Low-Rank Training with Global Loss Convergence Guarantees<br/>
+                        <b> <u>Steffen Schotthöfer</u>,MP Laiu
+                        </b><br/>
+                        <i><a href="https://arxiv.org/pdf/2406.17887">ArXiv preprint</a> </i>
+                    </li>
+                </ul>
                 <ul>
                     <li>Structure-preserving neural networks for the regularized entropy-based closure of the Boltzmann moment system <br/>
                         <b> <u>Steffen Schotthöfer</u>, M. Paul Laiu,  Martin Frank, Cory Hauck
