--- a/index.html
+++ b/index.html
@@ -193,22 +193,27 @@ A smaller number of methods address the reduction of training costs, mostly base
                         </b><br/>
                         <i><a href="https://arxiv.org/pdf/2410.18720">ArXiv preprint</a> </i>
                     </li>
-                </ul>
-                <ul>
+
                     <li>Federated Dynamical Low-Rank Training with Global Loss Convergence Guarantees<br/>
-                        <b> <u>Steffen Schotthöfer</u>,MP Laiu
+                        <b> <u>Steffen Schotthöfer</u>, MP Laiu
                         </b><br/>
                         <i><a href="https://arxiv.org/pdf/2406.17887">ArXiv preprint</a> </i>
                     </li>
-                </ul>
-                <ul>
+
                     <li>Structure-preserving neural networks for the regularized entropy-based closure of the Boltzmann moment system <br/>
                         <b> <u>Steffen Schotthöfer</u>, M. Paul Laiu,  Martin Frank, Cory Hauck
                         </b><br/>
                         <i><a href="https://arxiv.org/abs/1804.05447">ArXiv preprint</a> </i>
                     </li>
-                </ul>
-                <ul>
+
+                    <li>Geometry-aware training of factorized layers in tensor Tucker format <br/>
+                           <b> Emanuele Zangrando*, <u>Steffen Schotthöfer</u>*, Gianluca Ceruti, Jonas Kusch,
+                    Francesco Tudisco
+                </b><br/>
+                        * equal contribution<br/>
+                        <i><a href="https://nips.cc/virtual/2024/poster/94579">NeurIPS 2024</a> </i>
+                    </li>
+
                     <li>Structure-Preserving Operator Learning: Modeling the Collision Operator of
 Kinetic Equations <br/>
                         <b> Jae Yong Lee,  <u>Steffen Schotthöfer</u>, Tianbai Xiao, Sebastian Krumscheid, Martin Frank
@@ -227,9 +232,10 @@ Kinetic Equations <br/>
                         class="label">Github</span></a>
             </li>
             <li>Rank-adaptive spectral pruning of convolutional layers during training <br/>
-                <b> Emanuele Zangrando, <u>Steffen Schotthöfer</u>, Gianluca Ceruti, Jonas Kusch,
+                <b> Emanuele Zangrando*, <u>Steffen Schotthöfer</u>*, Gianluca Ceruti, Jonas Kusch,
                     Francesco Tudisco
                 </b><br/>
+                * equal contribution<br/>
                 <i><a href="https://arxiv.org/abs/2305.19059">ArXiv preprint</a> </i>
             </li>
 
@@ -317,13 +323,24 @@ Kinetic Equations <br/>
     <section id="four">
         <h2> Community and Volunteering</h2>
         <ul>
+            <li>Reviewer for the
+                <i><a href="https://link.springer.com/journal/10915">Journal of Scientific Computing</a></i>
+            </li>
+             <li>Reviewer for the
+                <i><a href="https://www.sciencedirect.com/journal/journal-of-computational-physics">Journal of Computational Physics</a></i>
+            </li>
             <li>Reviewer for
                 <i><a href="https://www.siam.org/publications/journals/multiscale-modeling-and-simulation-a-siam-interdisciplinary-journal-mms">SIAM Multiscale Methods and Simulation</a></i>
+            </li>
+            <li>Reviewer for the
+                <i><a href="https://iclr.cc/">ICLR 2025 Conference</a></i>
+            </li>
+            <li>Reviewer for the
+                <i><a href="https://aaai.org/conference/aaai/aaai-25/">AIAA 2025 Conference</a></i>
             </li>
              <li>Reviewer for the
                 <i><a href="https://nips.cc/">NeurIPS 2024 Conference</a></i>
                 <br/>
-
             </li>
             <li>Reviewer for the
                 <i><a href="https://icml.cc/">ICML 2024 Conference</a></i>
@@ -341,6 +358,22 @@ Kinetic Equations <br/>
     <section id="five">
         <h2> Conferences </h2>
         <ul>
+             <li>Federated Dynamical Low-Rank Training with Global Loss Convergence Guarantees<br/>
+                <i><a href="https://federated-learning.org/fl@fm-neurips-2024/">International Workshop on Federated Foundation Models
+In Conjunction with NeurIPS 2024 </a></i>
+                <br/>
+                December 2024
+            </li>
+            <li>Geometry-aware training of factorized layers in tensor Tucker format<br/>
+                <i><a href="https://neurips.cc/virtual/2024/poster/94579">NeurIPS 2024</a></i>
+                <br/>
+                December 2024
+            </li>
+            <li>Dynamical Low-Rank Training Strategies for Federated Learning<br/>
+                <i><a href="https://meetings.siam.org/sess/dsp_programsess.cfm?SESSIONCODE=80604">SIAM MDS 2024</a></i>
+                <br/>
+                October 2024
+            </li>
             <li>Neural Network Training with Dynamical Low-Rank Inspired Optimizers<br/>
                 <i><a href="https://www.scicade2024.org/">SciCADE 2024</a></i>
                 <br/>
@@ -431,6 +464,11 @@ Boltzmann moment system<br/>
         <hr/>
         <h2>Selected Talks</h2>
         <ul>
+            <li>Memory and time efficient neural network training via dynamical low-rank approximation<br/>
+                <i>KIT, Karlsruhe, Germany  </i>
+                <br/>
+                April 2023
+            </li>
             <li>Dynamical Low-Rank Approximation for
 Kinetic Equations and Neural Networks<br/>
                 <i> Lawrence Berkeley National Laboratories, CA, USA  </i>
