--- a/index.html
+++ b/index.html
@@ -471,7 +471,7 @@ Boltzmann moment system<br/>
             </li>
             <li>Dynamical Low-Rank Approximation for
 Kinetic Equations and Neural Networks<br/>
-                <i> Lawrence Berkeley National Laboratories, CA, USA  </i>
+                <i> Lawrence Livermore National Laboratories, CA, USA  </i>
                 <br/>
                 December 2023
             </li>
