--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 <!-- Header -->
 <header id="header">
     <div class="banner">
-        <a href="#" class="image avatar"><img src="images/Steffen_portrait.jpg" alt="Profile picture of Pia Stammer."/></a>
+        <a href="#" class="image avatar"><img src="images/Steffen_portrait.jpg" alt="Profile picture of Steffen Schotthöfer."/></a>
         <h1><strong>Hi, I am Steffen Schotthöfer!</strong></h1>
-        <p>Machine Learning - Kinetic Simulation</p>
+        <p>Machine Learning - Plasma Physics - High Performance Computing</p>
     </div>
 
     <div class="container">
@@ -404,7 +404,7 @@ Boltzmann moment system<br/>
             <li>Regularized, Structure-preserving Neural Networks for
                 the Minimal Entropy Closure of the Boltzmann Moment
                 System<br/>
-                <i><a href="https://www.siam.org/conferences/cm/conference/cse23">SIAM CSE 2023
+                <i><a href="https://www.siam.org/conferences-events/past-event-archive/cse23/">SIAM CSE 2023
                     Conference</a></i>
                 <br/>
                 February 2023
